# cutrace

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cu  schema.md  test.cu
docs/: .gitignore  Makefile  conf.py  index.rst  requirements.txt
inc/: cpu_to_gpu.hpp  cpu_types.hpp  cpu_types_.hpp  cuda.hpp  default_schema.hpp  either.hpp  gpu_array.hpp  gpu_types.hpp  gpu_types_.hpp  gpu_variant.hpp  grid.hpp  images.hpp  json_helpers.hpp  kernel.hpp  kernel_depth.hpp  kernel_prepare.hpp  loader.hpp  mesh_loader.hpp  ray_cast.hpp  scene_subdiv.hpp  schema_view.hpp  shading.hpp  static_string.hpp  vector.hpp
scene/: bunny.json  bunny_small.json  mirror.json  scene.json  sphere_plane.json  triangle.json
src/: cpu_types.cu  gpu_types.cu  images.cu  kernel_depth.cu  kernel_prepare.cu  loader.cu  mesh_loader.cu  shading.cu  stb_impl.cu
